test/tests/stages/18_structures/invalid_types/tag_resolution/member_name_wrong_scope.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[36]:
  struct
  identifier(s)
  {
  int
  identifier(a)
  ;
  }
  ;
  int
  identifier(main)
  (
  void
  )
  {
  struct
  identifier(s)
  identifier(foo)
  =
  {
  const int(1)
  }
  ;
  struct
  identifier(s)
  {
  int
  identifier(b)
  ;
  }
  ;
  return
  identifier(foo)
  .
  identifier(b)
  ;
  }
